# LibApp

./: .gitignore  README.md  README.rst  build.sh  build_files.sh  package-lock.json  package.json  pkey  pkey.pub  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
core/: views.py
core/core/project/static/project/static/: staticfiles.json
core/project/: asgi.py  deployment.py  settings.py  urls.py  wsgi.py
core/project/settings/: __init__.py  base.py  developement.py  utils_config.py
core/project/static/css/: style.css
core/project/static/sass/: style.scss
core/staticfiles/: staticfiles.json
core/staticfiles/css/: style.98c0fe0667f4.css  style.cf0809fb9f43.css  style.css.0e14638735ba.map  style.css.7a8dd7bdd134.map
core/staticfiles/js/: script.cf42b1c886fd.js
core/templates/core/: about.html  base.html  index.html
item/: models.py  urls.py  views.py
item/migrations/: 0001_initial.py
item/templates/item/: detail.html  items.html
newsletter/: models.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
staticfiles/css/: style.css  style.f0948df0d35f.css
staticfiles/sass/: style.5b2f690629a7.scss
